<resources>
    <string name="app_name">MyNews</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="menu_description">More options</string>

    <string name="logo_description" translatable="false">New York Times logo</string>

    <!-- items strings -->
    <string name="item_title" translatable="false">title</string>
    <string name="item_date" translatable="false">date</string>
    <string name="item_section" translatable="false">section</string>

    <!-- Queries selection activity strings -->
    <string name="searching_terms">keywords (mandatory)</string>

    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>

    <string name="checkbox_politics">Politics</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_arts">Arts</string>
    <string name="checkbox_travel">Travel</string>
    <string name="checkbox_business">Business</string>
    <string name="checkbox_entrepreneurs">Entrepreneurs</string>

    <string name="search_button">SEARCH</string>
    <string name="search_switch_text">Enable notifications(Once per day)</string>

    <!-- popup menu string name and navigation drawer -->
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <string name="top_stories" translatable="false">Top Stories</string>
    <string name="most_popular" translatable="false">Most Popular</string>
    <string name="favorites" translatable="false">Sports</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Request status messages and related -->
    <string name="waiting_request">Ongoing Request, please wait…</string>
    <string name="error_no_article">There is no article to display at the moment</string>
    <string name="error_failure">Oops, something went wrong! Check your device\'s internet\nconnection or try again later.</string>
    <string name="error_bad_request">The request return no article, check again later.</string>
    <string name="refresh_request_button">REFRESH</string>

    <!-- About_activity texts -->
    <string name="about_text">This application has been developed by Gautier Cliquet as part of the Openclassrooms Android Developer course. See <b>openclassrooms.com</b> for further informations.</string>

    <!-- Menu texts -->
    <string name="article_image" translatable="false">article_image</string>
    <string name="search_articles">Search</string>

    <!-- Notif.java texts -->
    <string name="no_new_article">There is no new article, maybe later!</string>
    <string name="new_articles">There is new articles, check them out!</string>
    <string name="one_new_article">There is 1 new article, check it!</string>
    <string name="x_new_articles">There are " %1$d " new articles, check them!</string>

    <!-- mandatory keyword and category texts -->
    <string name="no_keyword">At least one keyword must be entered</string>
    <string name="no_category">At least one category must be checked</string>

</resources>
