<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_topstories"
            android:icon="@drawable/icon_topstories"
            android:title="@string/top_stories" />

        <item
            android:id="@+id/activity_main_drawer_mostpopular"
            android:icon="@drawable/icon_mostpopular"
            android:title="@string/most_popular" />

        <item
            android:id="@+id/activity_main_drawer_favorite"
            android:icon="@drawable/icon_favorite"
            android:title="@string/favorites" />

        <item
            android:id="@+id/activity_main_drawer_articlesearch"
            android:icon="@drawable/icon_articlesearch"
            android:title="@string/search_articles" />

        <item
            android:id="@+id/activity_main_drawer_notifications"
            android:icon="@drawable/icon_notification"
            android:title="@string/notifications" />
    </group>

</menu>