<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_item_parentLayout_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="horizontal"
    android:background="@color/unreadArticles">

    <ImageView
        android:id="@+id/layout_item_image_imageview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/layout_item_section_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:text="@string/item_section" />

    <TextView
        android:id="@+id/layout_item_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/item_date" />

    <TextView
        android:id="@+id/layout_item_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="25dp"
        android:text="@string/item_title" />


</RelativeLayout>